--- a/sign-up.html
+++ b/sign-up.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Bulls</title>
+    <title>SIGN-UP</title>
     <link rel="stylesheet" href="./css/bc.css">
-    <link rel="stylesheet" href="./css/about.css">
+    <link rel="stylesheet" href="./css/sign-up.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section class="about">
+    <section class="sign">
         <header class="header">
             <nav class="navbar">
                 <a href="bc-home.html" class="nav-logo"><h1>BULLCITY</h1></a>
@@ -41,44 +41,34 @@
         </nav>
         </header>
 
-
-        <div class="about-bull">
+        <div class="form-container">
+            <div><h1>Sign-Up</h1></div>
             <div>
-                <h1>BULLCITY</h1>
-                <p>BULLCITY is an NFT community created to help optimistic traders
-                 illuminate there vision of digital exchange, the bullish market is 
-                 always guaranteed as long as traders keep buying the bull tokens.
-                </p>
-                <p>
-                    BULL NFTs will be launched soon and intigrated into blockchain 
-                    game development, bull traders get the chance to fight the bears and earn Bull.
-                </p>
-            </div>
+                <form action="/action_page.php" autocomplete="on">
+                    <label for="fname">First Name</label><br>
+                    <input type="text" id="fname" name="fname" required><br>
 
-            <div>
-                <img src="./img/Asterion__Lionel_Prats-removebg-preview.png" alt="asterion">
-            </div>
-        </div>
+                    <label for="lname">Last Name</label><br>
+                    <input type="text" id="lname" name="lname" required><br>
 
- 
-    
-    </section>
+                    <label for="email">Email</label><br>
+                    <input type="email" id="email" name="email" placeholder="example@gmail.com" autocomplete="on" required><br>
 
-    <section class="about">
-        <div class="about-us">
-            <div>
-                <h1>About Us</h1>
-                <p>
-                    BULL is the official token of the ERC Network
-                    Bull holders will be rewarded with BULLs that can be swaped to other coins
-                    or trade in the NFT MARKETPLACE,
-                    airdropped bi-weekly to “opted-in” holders.
-                </p>
+                    <label for="password">Create Password</label><br>
+                    <input type="password" id="password" name="password" required><br>
+
+                    <label for="rpassword">Retype Password</label><br>
+                    <input type="password" id="rpassword" name="rpassword" required><br>
+
+                    <input type="submit" value="Submit" class="submit">
+                </form>
             </div>
             <div>
-                <img src="./img/Eth-market-upd-removebg-preview.png" alt="eth">
+                <p>Already have an account?</p>
+                <a href="./login.html">Login</a>
             </div>
         </div>
+
     </section>
 
     <footer>
@@ -97,28 +87,26 @@
         <div class="copy"> <p>Copyright 2021 CrexConnect. All Rights Reserved</p></div>
     </footer>
 
-    <script>
-        
-const hamburger = document.querySelector(".hamburger");
-const navMenu = document.querySelector(".nav-menu");
+    <script>                
+        const hamburger = document.querySelector(".hamburger");
+        const navMenu = document.querySelector(".nav-menu");
 
-hamburger.addEventListener("click", mobileMenu);
+        hamburger.addEventListener("click", mobileMenu);
 
-function mobileMenu() {
-hamburger.classList.toggle("active");
-navMenu.classList.toggle("active");
-}
+        function mobileMenu() {
+        hamburger.classList.toggle("active");
+        navMenu.classList.toggle("active");
+        }
 
-const navLink = document.querySelectorAll(".nav-link");
+        const navLink = document.querySelectorAll(".nav-link");
 
-navLink.forEach(n => n.addEventListener("click", closeMenu));
+        navLink.forEach(n => n.addEventListener("click", closeMenu));
 
-function closeMenu() {
-hamburger.classList.remove("active");
-navMenu.classList.remove("active");
-}
+        function closeMenu() {
+        hamburger.classList.remove("active");
+        navMenu.classList.remove("active");
+        }
     </script>
     <script src="./app.js"></script>
-
 </body>
 </html>
