--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
 
         
         <div class="form-container">
-            <div><h1>Sign-Up</h1></div>
+            <div><h1>Login</h1></div>
             <div>
                 <form action="/action_page.php" autocomplete="on">
 
