--- a/sol.html
+++ b/sol.html
@@ -24,7 +24,7 @@
                     <a href="about.html" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="support.html" class="nav-link">Support</a>
+                    <a href="https://t.me/+WBsM9InLDuY1YzFk" class="nav-link">Support</a>
                 </li>
                 <li class="nav-item">
                     <a href="login.html" class="nav-link">Login</a>
@@ -43,10 +43,10 @@
 
         <div class="container">
             <div class="qr-wrap">
-                <div><img src="https://images2.imgbox.com/01/3c/4NgSqVht_o.png"></div>
-                <div><input type="text" value="bc1qdsmsk2cxtvgj9mqzz4wzruja8kde9qm5mjps6q" id="myInput"></input></div>
+                <div><img src="/img/QR-sol.jpg"></div>
+                <div><input type="text" value="7kuPFc1WXHKHVufBYhbB6cnQCQaqgBZE4xJmzVQkQ21j" id="myInput"></div>
                 <div><p onclick="myFunction()" class="copy1">copy</p></div>
-                <a class="buy" href="">Buy</a>
+                <a class="buy" href="https://www.moonpay.com/buy/sol">Buy</a>
                 <div><p>Send only <b>Solana(SOL)</b> to this address</p><p>Sending any other coin may result to permanent loss.</p></div>
             </div>
         </div>
@@ -62,33 +62,13 @@
         </div>
         <div class="logo"><a href="./bc-home.html"><h1>BULLCITY</h1></a></div>
            <div class="icons">
-               <a href=""><img src="./img/discord.png" alt="discord"></a>
-               <a href=""><img src="./img/Free_Twitter_3D_Illustration_download_in_PNG__OBJ_or_Blend_format-removebg-preview.png" alt="twitter"></a>
-               <a href=""><img src="./img/telegram.png" alt="telegram"></a>
+                <a href="https://discord.gg/WUhuF9jX"><img src="./img/discord.png" alt="discord"></a>
+                <a href="https://twitter.com/BULLCIT79432620?t=YKJia30azaUZ3CoXqg6acA&s=09"><img src="./img/Free_Twitter_3D_Illustration_download_in_PNG__OBJ_or_Blend_format-removebg-preview.png" alt="twitter"></a>
+                <a href="https://t.me/+WBsM9InLDuY1YzFk"><img src="./img/telegram.png" alt="telegram"></a>
            </div>
-        <div class="copy"> <p>Copyright 2021 CrexConnect. All Rights Reserved</p></div>
+        <div class="copy"> <p>Copyright 2021 BULLCITY. All Rights Reserved</p></div>
     </footer>
 
-    <script>       
-        const hamburger = document.querySelector(".hamburger");
-        const navMenu = document.querySelector(".nav-menu");
-
-        hamburger.addEventListener("click", mobileMenu);
-
-        function mobileMenu() {
-        hamburger.classList.toggle("active");
-        navMenu.classList.toggle("active");
-        }
-
-        const navLink = document.querySelectorAll(".nav-link");
-
-        navLink.forEach(n => n.addEventListener("click", closeMenu));
-
-        function closeMenu() {
-        hamburger.classList.remove("active");
-        navMenu.classList.remove("active");
-        }
-    </script>
     <script src="./app.js"></script>
 </body>
 </html>
