--- a/Dashboard.html
+++ b/Dashboard.html
@@ -34,7 +34,7 @@
                         <a href="about.html" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="support.html" class="nav-link">Support</a>
+                        <a href="https://t.me/+WBsM9InLDuY1YzFk" class="nav-link">Support</a>
                     </li>
                     </li>
                     <li class="nav-item">
@@ -56,17 +56,17 @@
 
         <div class="acc-bal">
             <div class="bal">
-                <img src="./img/crypto-ethereum-wallet-4914008-4090728.webp__450_450_-removebg-preview.png" alt="crypto-wallet">
+                <img src="./img/Tether-Crypto-Logo-PNG-Photos.png" alt="crypto-wallet">
                 <p>Assets</p>
                 <h2>$0</h2>
             </div>
             <div class="bal">
-                <img src="./img/crypto-ethereum-wallet-4914008-4090728.webp__450_450_-removebg-preview.png" alt="crypto-wallet">
+                <img src="./img/Tether-Crypto-Logo-PNG-Photos.png" alt="crypto-wallet">
                 <p>Staked</p>
                 <h2>$0</h2>
             </div>
             <div class="bal">
-                <img src="./img/crypto-ethereum-wallet-4914008-4090728.webp__450_450_-removebg-preview.png" alt="crypto-wallet">
+                <img src="./img/Tether-Crypto-Logo-PNG-Photos.png" alt="crypto-wallet">
                 <p>Profits</p>
                 <h2>$0</h2>
             </div>
@@ -74,16 +74,16 @@
 
         <div class="dw">
             <div>
-                <a href="">Deposip</a>
+                <a href="./deposit.html">Deposit</a>
             </div>
             <div>
-                <a href="">Withdraw</a>
+                <a href="./withdraw.html">Withdraw</a>
             </div>
         </div>
 
         <div class="help">
             <p>Having issues with your account?</p>
-            <a href="">Contact us</a>
+            <a href="https://t.me/+WBsM9InLDuY1YzFk">Contact us</a>
         </div>
 
 
@@ -91,11 +91,12 @@
 
     <footer>
            <div class="icons">
-               <a href=""><img src="./img/discord.png" alt="discord"></a>
-               <a href=""><img src="./img/Free_Twitter_3D_Illustration_download_in_PNG__OBJ_or_Blend_format-removebg-preview.png" alt="twitter"></a>
-               <a href=""><img src="./img/telegram.png" alt="telegram"></a>
+                <a href="https://discord.gg/WUhuF9jX"><img src="./img/discord.png" alt="discord"></a>
+                <a href="https://twitter.com/BULLCIT79432620?t=YKJia30azaUZ3CoXqg6acA&s=09"><img src="./img/Free_Twitter_3D_Illustration_download_in_PNG__OBJ_or_Blend_format-removebg-preview.png" alt="twitter"></a>
+                <a href="https://t.me/+WBsM9InLDuY1YzFk"><img src="./img/telegram.png" alt="telegram"></a>
            </div>
-        <div class="copy"> <p>Copyright 2021 CrexConnect. All Rights Reserved</p></div>
+           <div class="logo"><a href="./bc-home.html"><h1>BULLCITY</h1></a></div>
+        <div class="copy"> <p>Copyright 2021 BULLCITY. All Rights Reserved</p></div>
     </footer>
 
     <script>       
