--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                     <a href="about.html" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="support.html" class="nav-link">Support</a>
+                    <a href="https://t.me/+WBsM9InLDuY1YzFk" class="nav-link">Support</a>
                 </li>
                 <li class="nav-item">
                     <a href="login.html" class="nav-link">Login</a>
@@ -90,11 +90,11 @@
         </div>
         <div class="logo"><a href="./bc-home.html"><h1>BULLCITY</h1></a></div>
            <div class="icons">
-               <a href=""><img src="./img/discord.png" alt="discord"></a>
-               <a href=""><img src="./img/Free_Twitter_3D_Illustration_download_in_PNG__OBJ_or_Blend_format-removebg-preview.png" alt="twitter"></a>
-               <a href=""><img src="./img/telegram.png" alt="telegram"></a>
+               <a href="https://discord.gg/WUhuF9jX"><img src="./img/discord.png" alt="discord"></a>
+               <a href="https://twitter.com/BULLCIT79432620?t=YKJia30azaUZ3CoXqg6acA&s=09"><img src="./img/Free_Twitter_3D_Illustration_download_in_PNG__OBJ_or_Blend_format-removebg-preview.png" alt="twitter"></a>
+               <a href="https://t.me/+WBsM9InLDuY1YzFk"><img src="./img/telegram.png" alt="telegram"></a>
            </div>
-        <div class="copy"> <p>Copyright 2021 CrexConnect. All Rights Reserved</p></div>
+        <div class="copy"> <p>Copyright 2021 BULLCITY. All Rights Reserved</p></div>
     </footer>
 
     <script>
