--- a/btc.html
+++ b/btc.html
@@ -69,6 +69,6 @@
         <div class="copy"> <p>Copyright 2021 BULLCITY. All Rights Reserved</p></div>
     </footer>
 
-    <script src="./app.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 </html>
