--- a/deposit.html
+++ b/deposit.html
@@ -89,6 +89,6 @@
         navMenu.classList.remove("active");
         }
     </script>
-    <script src="./app.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 </html>
