--- a/sign-up.html
+++ b/sign-up.html
@@ -87,26 +87,6 @@
         <div class="copy"> <p>Copyright 2021 BULLCITY. All Rights Reserved</p></div>
     </footer>
 
-    <script>                
-        const hamburger = document.querySelector(".hamburger");
-        const navMenu = document.querySelector(".nav-menu");
-
-        hamburger.addEventListener("click", mobileMenu);
-
-        function mobileMenu() {
-        hamburger.classList.toggle("active");
-        navMenu.classList.toggle("active");
-        }
-
-        const navLink = document.querySelectorAll(".nav-link");
-
-        navLink.forEach(n => n.addEventListener("click", closeMenu));
-
-        function closeMenu() {
-        hamburger.classList.remove("active");
-        navMenu.classList.remove("active");
-        }
-    </script>
-    <script src="./app.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 </html>
