--- a/withdraw.html
+++ b/withdraw.html
@@ -101,6 +101,6 @@
         navMenu.classList.remove("active");
         }
     </script>
-    <script src="./app.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 </html>
